# download_WDC_indexes

./: README.md  pyproject.toml
downloaders/: download_SymAsy_index.py
src/downloadWdc/: download_SymAsy_index.py
