[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "downloadWdc"
version = "0.0.1"
authors = [
  { name="Jose P. Marchezi", email="jpmarchez@gmail.com" },
]
description = "A small package with some routines to automate the download of Kyoto WDC Geomagnetic Indexes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zemarchezi/download_WDC_indexes"
Issues = "https://github.com/zemarchezi/download_WDC_indexes/issues"